--- a/index.html
+++ b/index.html
@@ -26,12 +26,7 @@
 						</ul>
 					</div>
 
-				<!-- Header -->
-					<!-- <header id="header">
-						<a href="index.html" class="logo">Massively</a>
-					</header> -->
 
-				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Profiles</a></li>
@@ -65,7 +60,7 @@
 										Instagram Clone</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>A MySQL database of 500+ generated users simulating Instagram's userbase and their actiivity</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
