--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>William Smith Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -29,7 +29,7 @@
 
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Profiles</a></li>
+							<li class="active"><a href="index.html">Projects</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/smithw8857/" class="icon brands fa-linkedin"><span class="label">Instagram</span></a></li>
