--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>A MySQL database of 500+ generated users simulating Instagram's userbase and their actiivity</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Take a Look</a></li>
 									</ul>
 								</article>
 								<article>
@@ -73,7 +73,7 @@
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Take a Look</a></li>
 									</ul>
 								</article>
 								
