--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 										Email Web Application</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>A web application made in conjunction with MySql, Node.js and CSS that stores applying user's email to a MySQL database</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Take a Look</a></li>
 									</ul>
