--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>A MySQL database of 500+ generated users simulating Instagram's userbase and their actiivity</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Take a Look</a></li>
+										<li><a href="https://github.com/Smithw8857/hello-world" class="button">Take a Look</a></li>
 									</ul>
 								</article>
 								<article>
