--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">William Smith</a></h2>
+									<h2><a href="#">W S</a></h2>
 									<p>An aspiring developer. Come take a look at some of my projects!</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
