--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 										<h2><a href="#">Project 1<br />
 										Instagram Clone</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://github.com/Smithw8857/Instagram-Clone" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>A MySQL database of 500+ generated users simulating Instagram's userbase and their activity</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Smithw8857/Instagram-Clone" class="button">Take a Look</a></li>
