--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">William Smith</a></h2>
+									<h2><a href="https://github.com/Smithw8857">William Smith</a></h2>
 									<p>An aspiring developer. Come take a look at some of my projects!</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="https://github.com/Smithw8857" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Take a look</a></li>
+									<li><a href="https://github.com/Smithw8857" class="button large">Take a look</a></li>
 								</ul>
 							</article>
 
@@ -51,7 +51,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Project 1<br />
+										<h2><a href="https://github.com/Smithw8857/Instagram-Clone">Project 1<br />
 										Instagram Clone</a></h2>
 									</header>
 									<a href="https://github.com/Smithw8857/Instagram-Clone" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
