--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 									<h2><a href="https://github.com/Smithw8857">William Smith</a></h2>
 									<p>An aspiring developer. Come take a look at some of my projects!</p>
 								</header>
-								<a href="https://github.com/Smithw8857" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="https://github.com/Smithw8857" class="image main"><img src="matt-reames-rIopOpBqGRI-unsplash.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/Smithw8857" class="button large">Take a look</a></li>
 								</ul>
