--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 					<nav id="nav">
 						<ul class="links">
 							
-						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/smithw8857/" class="icon brands fa-linkedin"><span class="label">Instagram</span></a></li>
+							<ul class="icons">
+							<li><a href="https://www.linkedin.com/in/smithw8857/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							
 							<li><a href="https://github.com/Smithw8857" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
