--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 									<h2><a href="https://github.com/Smithw8857">William Smith</a></h2>
 									<p>An aspiring developer. Come take a look at some of my projects!</p>
 								</header>
-								<a href="https://github.com/Smithw8857" class="image main"><img src="matt-reames-rIopOpBqGRI-unsplash.jpg" alt="" /></a>
+								<a href="https://github.com/Smithw8857" class="image main"><img src="images/matt-reames-rIopOpBqGRI-unsplash.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/Smithw8857" class="button large">Take a look</a></li>
 								</ul>
@@ -54,7 +54,7 @@
 										<h2><a href="https://github.com/Smithw8857/Instagram-Clone">Project 1<br />
 										Instagram Clone</a></h2>
 									</header>
-									<a href="https://github.com/Smithw8857/Instagram-Clone" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://github.com/Smithw8857/Instagram-Clone" class="image fit"><img src="images/neonbrand-nZJBt4gQlKI-unsplash.jpg" alt="" /></a>
 									<p>A MySQL database of 500+ generated users simulating Instagram's userbase and their activity</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Smithw8857/Instagram-Clone" class="button">Take a Look</a></li>
