--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Project 2<br />
+										<h2><a href="https://github.com/Smithw8857/Web_Application">Project 2<br />
 										Email Web Application</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/Welcome.png" alt="" /></a>
 									<p>A web application made in conjunction with MySql, Node.js and CSS that stores applying user's emails to a MySQL database</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Take a Look</a></li>
+										<li><a href="https://github.com/Smithw8857/Web_Application" class="button">Take a Look</a></li>
 									</ul>
 								</article>
 								
