--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>This is my portfolio<br />
-						<p>A showcase of my projects and my abilities</p>
+						<h1>Welcome to  my portfolio<br />
+						<p>This is a showcase of my projects and my abilities</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
