--- a/index.html
+++ b/index.html
@@ -21,13 +21,10 @@
 						</ul>
 					</div>
 
-
+			<!-- NAV -->
 					<nav id="nav">
-						<ul class="links">
-							
 							<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/smithw8857/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							
 							<li><a href="https://github.com/Smithw8857" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
