--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<nav id="nav">
 							<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/smithw8857/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://github.com/Smithw8857" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/Smithw8857" class="icon brands fa-file"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
