--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<nav id="nav">
 							<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/smithw8857/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://github.com/Smithw8857" class="icon brands fa-file"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/Smithw8857" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -40,7 +40,8 @@
 								</header>
 								<a href="https://github.com/Smithw8857" class="image main"><img src="images/shahadat-rahman-BfrQnKBulYQ-unsplash.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/Smithw8857" class="button large">Take a look</a></li>
+									<li><a href="https://github.com/Smithw8857" class="button large">GitHub</a></li>
+									<li><a href="#" class="button large">Resume</a></li>
 								</ul>
 							</article>
 
