--- a/index.html
+++ b/index.html
@@ -69,6 +69,17 @@
 										<li><a href="https://github.com/Smithw8857/Web_Application" class="button">Take a Look</a></li>
 									</ul>
 								</article>
+																<article>
+									<header>
+										<h2><a href="https://public.tableau.com/profile/smithw8857">Project 2<br />
+										Data Visualizations</a></h2>
+									</header>
+									<a href=""https://public.tableau.com/profile/smithw8857"" class="image fit"><img src="images/Welcome.png" alt="" /></a>
+									<p>A compilation of data visualizations I have created using Tableau</p>
+									<ul class="actions special">
+										<li><a href="https://public.tableau.com/profile/smithw8857" class="button">Take a Look</a></li>
+									</ul>
+								</article>
 								
 
 						<!-- Footer -->
