--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 										<h2><a href="https://public.tableau.com/profile/smithw8857">Project 2<br />
 										Data Visualizations</a></h2>
 									</header>
-									<a href=""https://public.tableau.com/profile/smithw8857"" class="image fit"><img src="images/Data%Visualization.jpg" alt="" /></a>
+									<a href=""https://public.tableau.com/profile/smithw8857"" class="image fit"><img src="images/Data-Visualization.jpg" alt="" /></a>
 									<p>A compilation of data visualizations I have created using Tableau</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/profile/smithw8857" class="button">Take a Look</a></li>
