--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 								<a href="https://github.com/Smithw8857" class="image main"><img src="images/shahadat-rahman-BfrQnKBulYQ-unsplash.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/Smithw8857" class="button large">GitHub</a></li>
-									<li><a href="Will Smith Resume Dec. 2023.pdf" class="button large">Resume</a></li>
+									<li><a href="Portfolio Copy William Smith Resume August 2024.pdf" class="button large">Resume</a></li>
 								</ul>
 							</article>
 
